[Refactor] Spring Security 인가 검증을 추가한다 (#171)
* feat: 모든 environment variable이 적용되었는지 확인하는 리눅스 쉘 스크립트 작성

* refactor: INVALID_USER_JWT -> INVALID_USER 에러코드 명 변경

* feat: controller 메서드 별로 spring security 인가 검증 추가

* refactor: ProductService의 Test 리팩토링

* feat: spring security 인가 검증 추가로 인한 service 및 service layer test의 불필요한 코드를 제거한다

* refactor: code refactoring

* refactor: FriendProductServiceTest 리팩토링

* refactor: ProductOthersService test code refactoring

* fix: ShareService의 파일 검증 로직 되돌리기

* refactor: 변수명 변경

* refactor: StoreCondition, SortCondition string -> enum 변환 메서드 수정

* refactor: main folder code refactoring

* refactor: CustomCommentListResponse의 사용되지 않는 제너릭 제거

* refactor: 불필요한 변수 제거

* refactor: -1 -> Long.valueOf(-1)

* refactor: Long.valueOf(-1) -> -1

This reverts commit 0504ebe5dd60d9a360691b67e812caf4fc73ef06.