@@ -12,11 +12,12 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import umc.stockoneqback.file.utils.exception.FileErrorCode;
+import umc.stockoneqback.file.exception.FileErrorCode;
 import umc.stockoneqback.global.exception.BaseException;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.UUID;
 
 @Slf4j
@@ -29,24 +30,21 @@ public class FileService {
     private static final String COMMENT = "comment";
     private static final String REPLY = "reply";
 
-    private final AmazonS3 amazonS3; // aws s3 client
+    private final AmazonS3 amazonS3;
 
     @Value("${cloud.aws.s3.bucket}")
     private String bucket;
 
-    // 게시글 작성 시 첨부파일 업로드
     public String uploadBoardFiles(MultipartFile file) {
         validateFileExists(file);
         return uploadFile(BOARD, file);
     }
 
-    // 자료 공유 첨부파일 업로드
     public String uploadShareFiles(MultipartFile file) {
         validateFileExists(file);
         return uploadFile(SHARE, file);
     }
 
-    // 제품 사진 업로드
     public String uploadProductFiles(MultipartFile file) {
         validateFileExists(file);
         validateContentType(file);
@@ -70,14 +68,12 @@ public class FileService {
         return uploadFile(REPLY, file);
     }
 
-    // 파일 존재 여부 검증
     private void validateFileExists(MultipartFile file) {
         if (file == null || file.isEmpty()) {
             throw BaseException.type(FileErrorCode.EMPTY_FILE);
         }
     }
 
-    // upload to S3
     private String uploadFile(String dir, MultipartFile file) {
         String fileKey = createFilePath(dir, file.getOriginalFilename());
 
@@ -95,13 +91,11 @@ public class FileService {
             throw BaseException.type(FileErrorCode.S3_UPLOAD_FAILED);
         }
 
-        // if it has to be used
         String fullFileUrl = amazonS3.getUrl(bucket, fileKey).toString();
 
         return fileKey;
     }
 
-    // uuid 사용하여 fileKey(파일명) 생성
     private String createFilePath(String dir, String originalFileName) {
         String uuidName = UUID.randomUUID() + "_" + originalFileName;
 
@@ -115,7 +109,6 @@ public class FileService {
         };
     }
 
-    // download
     public ResponseEntity<byte[]> download(String fileKey) throws IOException {
         S3Object s3object = amazonS3.getObject(new GetObjectRequest(bucket, fileKey));
         S3ObjectInputStream objectInputStream = s3object.getObjectContent();
@@ -126,7 +119,7 @@ public class FileService {
         httpHeaders.setContentLength(bytes.length);
         String[] arr = fileKey.split("/");
         String type = arr[arr.length - 1];
-        String fileName = URLEncoder.encode(type, "UTF-8").replaceAll("\\+", "%20");
+        String fileName = URLEncoder.encode(type, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         httpHeaders.setContentDispositionFormData("attachment", fileName); // 파일 이름 지정
 
         return new ResponseEntity<>(bytes, httpHeaders, HttpStatus.OK);
